--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -66,113 +66,73 @@
       <ul class="mission-list-title"
           data-target="mission.missionListTitle">默认任务清单
 	<li>
-	  <input type="checkbox" id="checkbox">
-          <label for="checkbox" class="mission-title">完成任务清单试图</label>
+	  <input type="checkbox" id="checkbox1">
+          <label for="checkbox1" class="mission-title">完成任务清单试图</label>
           <button type="button" class="btn mission-distributor">未指派</button>
         </li>
         <li>
-          <input type="checkbox" id="checkbox">
-          <label for="checkbox" class="mission-title">完成任务清单试图</label>
+          <input type="checkbox" id="checkbox2">
+          <label for="checkbox2" class="mission-title">完成任务清单试图</label>
           <button type="button" class="btn mission-distributor">未指派</button>
         </li>
         <li>
-          <input type="checkbox" id="checkbox">
-          <label for="checkbox" class="mission-title">完成任务清单试图</label>
+          <input type="checkbox" id="checkbox3">
+          <label for="checkbox3" class="mission-title">完成任务清单试图</label>
           <button type="button" class="btn mission-distributor">未指派</button>
         </li>
         <li>
-          <input type="checkbox" id="checkbox">
-          <label for="checkbox" class="mission-title">完成任务清单试图</label>
+          <input type="checkbox" id="checkbox4">
+          <label for="checkbox4" class="mission-title">完成任务清单试图</label>
           <button type="button" class="btn mission-distributor">未指派</button>
         </li>
         <li>
-          <input type="checkbox" id="checkbox">
-          <label for="checkbox" class="mission-title">完成任务清单试图</label>
+          <input type="checkbox" id="checkbox5">
+          <label for="checkbox5" class="mission-title">完成任务清单试图</label>
           <button type="button" class="btn mission-distributor">未指派</button>
         </li>
         <li>
-          <input type="checkbox" id="checkbox">
-          <label for="checkbox" class="mission-title">完成任务清单试图</label>
+          <input type="checkbox" id="checkbox6">
+          <label for="checkbox6" class="mission-title">完成任务清单试图</label>
           <button type="button" class="btn mission-distributor">未指派</button>
         </li>
         <li>
-          <input type="checkbox" id="checkbox">
-          <label for="checkbox" class="mission-title">完成任务清单试图</label>
+          <input type="checkbox" id="checkbox7">
+          <label for="checkbox7" class="mission-title">完成任务清单试图</label>
           <button type="button" class="btn mission-distributor">未指派</button>
         </li>
         <li>
-          <input type="checkbox" id="checkbox">
-          <label for="checkbox" class="mission-title">完成任务清单试图</label>
+          <input type="checkbox" id="checkbox8">
+          <label for="checkbox8" class="mission-title">完成任务清单试图</label>
           <button type="button" class="btn mission-distributor">未指派</button>
         </li>
         <li>
-          <input type="checkbox" id="checkbox">
-          <label for="checkbox" class="mission-title">完成任务清单试图</label>
+          <input type="checkbox" id="checkbox9">
+          <label for="checkbox9" class="mission-title">完成任务清单试图</label>
           <button type="button" class="btn mission-distributor">未指派</button>
         </li>
         <li>
-          <input type="checkbox" id="checkbox">
-          <label for="checkbox" class="mission-title">完成任务清单试图</label>
+          <input type="checkbox" id="checkbox10">
+          <label for="checkbox10" class="mission-title">完成任务清单试图</label>
           <button type="button" class="btn mission-distributor">未指派</button>
         </li>
         <li>
-          <input type="checkbox" id="checkbox">
-          <label for="checkbox" class="mission-title">完成任务清单试图</label>
+          <input type="checkbox" id="checkbox11">
+          <label for="checkbox11" class="mission-title">完成任务清单试图</label>
           <button type="button" class="btn mission-distributor">未指派</button>
         </li>
         <li>
-          <input type="checkbox" id="checkbox">
-          <label for="checkbox" class="mission-title">完成任务清单试图</label>
+          <input type="checkbox" id="checkbox12">
+          <label for="checkbox12" class="mission-title">完成任务清单试图</label>
           <button type="button" class="btn mission-distributor">未指派</button>
         </li>
         <li>
-          <input type="checkbox" id="checkbox">
-          <label for="checkbox" class="mission-title">完成任务清单试图</label>
+          <input type="checkbox" id="checkbox13">
+          <label for="checkbox13" class="mission-title">完成任务清单试图</label>
           <button type="button" class="btn mission-distributor">未指派</button>
         </li>
         <li>
-          <input type="checkbox" id="checkbox">
-          <label for="checkbox" class="mission-title">完成任务清单试图</label>
-          <button type="button" class="btn mission-distributor">未指派</button>
-        </li>
-        <li>
-          <input type="checkbox" id="checkbox">
-          <label for="checkbox" class="mission-title">完成任务清单试图</label>
-          <button type="button" class="btn mission-distributor">未指派</button>
-        </li>
-        <li>
-          <input type="checkbox" id="checkbox">
-          <label for="checkbox" class="mission-title">完成任务清单试图</label>
-          <button type="button" class="btn mission-distributor">未指派</button>
-        </li>
-        <li>
-          <input type="checkbox" id="checkbox">
-          <label for="checkbox" class="mission-title">完成任务清单试图</label>
-          <button type="button" class="btn mission-distributor">未指派</button>
-        </li>
-        <li>
-          <input type="checkbox" id="checkbox">
-          <label for="checkbox" class="mission-title">完成任务清单试图</label>
-          <button type="button" class="btn mission-distributor">未指派</button>
-        </li>
-        <li>
-          <input type="checkbox" id="checkbox">
-          <label for="checkbox" class="mission-title">完成任务清单试图</label>
-          <button type="button" class="btn mission-distributor">未指派</button>
-        </li>
-        <li>
-          <input type="checkbox" id="checkbox">
-          <label for="checkbox" class="mission-title">完成任务清单试图</label>
-          <button type="button" class="btn mission-distributor">未指派</button>
-        </li>
-        <li>
-          <input type="checkbox" id="checkbox">
-          <label for="checkbox" class="mission-title">完成任务清单试图</label>
-          <button type="button" class="btn mission-distributor">未指派</button>
-        </li>
-        <li>
-          <input type="checkbox" id="checkbox">
-          <label for="checkbox" class="mission-title">完成任务清单试图</label>
+          <input type="checkbox" id="checkbox14">
+          <label for="checkbox14" class="mission-title">完成任务清单试图</label>
           <button type="button" class="btn mission-distributor">未指派</button>
         </li>
         <li>
