Adjust mission-distributor foreground/background color

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -644,7 +644,7 @@ li {
 }
 
 .mission-distributor {
-    color: #aaa;
+    color: #666;
     padding-top: 0px;
     padding-bottom: 0px;
     padding-left: 1px;
@@ -656,6 +656,7 @@ li {
     border: var(--button-border);
     margin-top: 0px;
     margin-left: 10px;
+    background: #fff;
 }
 
 .mission-add-button {
