--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -20,29 +20,26 @@
 
 // Home page CSS.
 .home-background {
-    /* The image used */
-    background-image: url("background.jpg");
-    /* Full height */
-    height: 100%;
-    /* Center and scale the image nicely */
-    background-position: center;
-    background-repeat: no-repeat;
     background-size: cover;
+    background-image: url("background.jpg");    /* The image used */
+    background-repeat: no-repeat;
+    background-position: center;    /* Center and scale the image nicely */
+    height: 100%;    /* Full height */
 }
 
 .home-logo {
-    color: var(--logo-text-color);
     font-size: 600%;
     font-weight: bold;
+    color: var(--logo-text-color);
     opacity: 0.9;
 }
 
 .solgan {
-    color: var(--logo-text-color);
     font-size: 260%;
     font-weight: bold;
-    margin-bottom: 140px;
+    color: var(--logo-text-color);
     opacity: 0.9;
+    margin-bottom: 140px;
 }
 
 // Single page CSS.
@@ -52,24 +49,22 @@
 }
 
 .single-page-background {
-    background-color: var(--background-color);
-    /* Full height */
-    height: 100%;
-    /* Center and scale the image nicely */
-    background-position: center;
-    background-repeat: no-repeat;
     background-size: cover;
+    background-color: var(--background-color);
+    background-repeat: no-repeat;
+    background-position: center;/* Center and scale the image nicely */
+    height: 100%;/* Full height */
 }
 
 .sign-box {
     background-color: #fff;
-    border-radius: var(--button-radius);
-    border: var(--button-border);
-    box-shadow: 0px 10px 50px #eeeeee;
+    padding-top: 20px;
     padding-bottom: 20px;
     padding-left: 30px;
     padding-right: 30px;
-    padding-top: 20px;
+    border: var(--button-border);
+    border-radius: var(--button-radius);
+    box-shadow: 0px 10px 50px #eeeeee;
 }
 
 .sign-error {
@@ -86,8 +81,8 @@
 }
 
 .link-button {
-    color: #666;
     font-size: 14px;
+    color: #666;
     margin-left: 10px;
     margin-right: 10px;
 }
@@ -105,8 +100,8 @@
 }
 
 .link-button-small {
-    color: #666;
     font-size: 12px;
+    color: #666;
     margin-left: 10px;
     margin-right: 10px;
 }
@@ -124,8 +119,8 @@
 }
 
 .link-button-big {
-    color: var(--link-text-color);
     font-size: 16px;
+    color: var(--link-text-color);
 }
 
 .link-button-big:hover {
@@ -141,8 +136,8 @@
 }
 
 .link-button-small {
-    color: var(--link-text-color);
     font-size: 12px;
+    color: var(--link-text-color);
 }
 
 .link-button-small:hover {
@@ -170,8 +165,8 @@
 }
 
 .sign-button-vertical-margins {
-    margin-bottom: 5px;
     margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 .margins-horizontal-normal {
@@ -180,8 +175,8 @@
 }
 
 .margins-vertical-normal {
-    margin-bottom: 15px;
     margin-top: 15px;
+    margin-bottom: 15px;
 }
 
 .margin-bottom-normal {
@@ -211,49 +206,49 @@ a:link {
     top: 0px;
     left: 0px;
     width: 100%;
-    z-index: 9999;
     border-radius: 0px;
+    z-index: 9999;
 }
 
 ul {
-    list-style-type: none;
     padding: 0;
+    list-style-type: none;
 }
 
 li {
-    list-style-type: none;
     padding: 0;
+    list-style-type: none;
 }
 
 .flex-vcenter {
-    align-items: center;
     display: flex;
     height: 100%;
+    align-items: center;
 }
 
 .flex-vcenter-columns {
-    align-items: center;
     display: flex;
     height: 100%;
+    align-items: center;
     justify-content: space-around;
 }
 
 .flex-column-center {
     display: flex;
     height: 100%;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
 }
 
 .flex-center {
-    align-items: center;
     display: flex;
-    flex-direction: column;
-    height: 100%;
-    justify-content: center;
-    text-align: center;
     width: 100%;
+    height: 100%;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
 }
 
 .flex-align-right {
@@ -269,9 +264,9 @@ li {
 }
 
 .logo {
-    color: var(--logo-color);
     font-size: 450%;
     font-weight: bold;
+    color: var(--logo-color);
     margin-bottom: 40px;
 }
 
@@ -282,35 +277,35 @@ li {
 
 .btn:focus,
 .btn:active {
-    outline: none !important;
     box-shadow: none !important;
+    outline: none !important;
 }
 
 .btn-primary {
+    font-size: 18px;
+    color: rgba(255, 255, 255, 0.9);
     background-color: var(--button-color);
     border-color: var(--button-color);
-    color: rgba(255, 255, 255, 0.9);
-    font-size: 18px;
 }
 
 .btn-primary:hover {
+    color: rgba(255, 255, 255, 0.9);
     background: var(--hover-color);
     border-color: var(--hover-color);
-    color: rgba(255, 255, 255, 0.9);
 }
 
 .btn-primary:active,
 .btn-primary:active:hover,
 .btn-primary:active:focus,
 .btn-primary:focus {
+    color: rgba(255, 255, 255, 0.9);
     background: var(--focus-color);
     border-color: var(--focus-color);
-    color: rgba(255, 255, 255, 0.9);
 }
 
 .btn-link {
-    color: var(--logo-text-color);
     font-size: 16px;
+    color: var(--logo-text-color);
 }
 
 .btn-link:hover {
@@ -332,8 +327,8 @@ li {
 }
 
 .form-check-label {
-    color: var(--link-text-color);
     font-size: 12px;
+    color: var(--link-text-color);
 }
 
 // Desktop page CSS.
@@ -354,44 +349,44 @@ li {
 }
 
 .project-splitter-bold {
+    background-color: var(--project-splitter-color);
     width: 100%;
     height: 4px;
-    background-color: var(--project-splitter-color);
 }
 
 .project-splitter-light {
+    background-color: var(--project-splitter-color);
     width: 100%;
     height: 1px;
-    background-color: var(--project-splitter-color);
     margin-top: 5px;
 }
 
 .form-title {
-    margin-top: 10px;
-    margin-bottom: 40px;
     font-size: 20px;
     font-weight: 900;
+    margin-top: 10px;
+    margin-bottom: 40px;
 }
 
 .bread-crumbs-big {
-    background-color: rgba(250, 250, 250, 1);
-    border-radius: var(--button-radius);
-    border: var(--button-border);
-    border-bottom-style: none;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
-    box-shadow: 0px 10px 50px #eee;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-top: 8px;
-    padding-bottom: 8px;
-    width: 880px;
-    overflow: hidden;		// make parent div expand height when have 'float' child div in it
-    cursor: pointer;
     font-size: 18px;
     color: #999;
+    background-color: rgba(250, 250, 250, 1);
+    width: 880px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 30px;
+    padding-right: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    border: var(--button-border);
+    border-radius: var(--button-radius);
+    border-bottom-style: none;
+    box-shadow: 0px 10px 50px #eee;
+    cursor: pointer;
+    overflow: hidden;           // make parent div expand height when have 'float' child div in it
 }
 
 .bread-crumbs-big:hover {
@@ -400,18 +395,18 @@ li {
 
 .board-box {
     background-color: #fff;
-    border-radius: var(--button-radius);
-    border: var(--button-border);
-    box-shadow: 0px 10px 50px #eee;
-    margin-bottom: 60px;
-    margin-left: auto;
-    margin-right: auto;
+    width: 900px;
+    padding-top: 20px;
     padding-bottom: 20px;
     padding-left: 30px;
     padding-right: 30px;
-    padding-top: 20px;
-    width: 900px;
-    overflow: hidden;		// make parent div expand height when have 'float' child div in it
+    margin-bottom: 60px;
+    margin-left: auto;
+    margin-right: auto;
+    border: var(--button-border);
+    border-radius: var(--button-radius);
+    box-shadow: 0px 10px 50px #eee;
+    overflow: hidden;           // make parent div expand height when have 'float' child div in it
 }
 
 .link-button-group {
@@ -421,9 +416,9 @@ li {
 }
 
 .team-name {
-    color: var(--logo-color);
     font-size: 20px;
     font-weight: 500;
+    color: var(--logo-color);
 }
 
 .team-name:hover {
@@ -443,8 +438,8 @@ li {
 }
 
 .top-header-item {
-    color: var(--link-text-color);
     font-size: 16px;
+    color: var(--link-text-color);
 }
 
 .top-header-item:hover {
@@ -467,8 +462,8 @@ li {
 }
 
 .top-search-bar-group {
-    margin-top: 3px;
     width: 200px;
+    margin-top: 3px;
 }
 
 .top-search-bar-input {
@@ -484,53 +479,53 @@ li {
 }
 
 .grid-container {
-    display: grid;
     grid-template-columns: auto auto auto auto;
+    display: grid;
 }
 
 .project-item {
     background-color: #fff;
+    width: 180px;
     height: 140px;
     margin: 10px;
     text-align: center;
-    width: 180px;
 }
 
 .project-item:hover {
-    border-radius: var(--button-radius);
     border: var(--button-border);
+    border-radius: var(--button-radius);
 }
 
 .project-icon {
-    color: var(--logo-color);
     font-size: 48px;
+    color: var(--logo-color);
     margin-bottom: 16px;
 }
 
 .project-name {
-    color: #333;
     font-size: 18px;
     font-weight: light;
+    color: #333;
 }
 
 // Phone page CSS.
 .phone-input-group {
+    background-color: #fff;
+    height: 50px;
     margin-top: 5px;
     margin-bottom: 5px;
-    height: 50px;
     border: 1px solid rgba(0, 0, 0, 0.05);
-    background-color: #fff;
 }
 
 .phone-input-title {
+    font-size: 16px;
     margin-left: 10px;
     margin-right: 10px;
-    font-size: 16px;
 }
 
 .phone-input-area {
-    border: none;
     font-size: 16px;
+    border: none;
 }
 
 .phone-input-area:focus {
@@ -538,88 +533,88 @@ li {
 }
 
 .phone-page-box {
-    height: 100%;
-    left: 0;
-    padding: 0;
     position: fixed;
     top: 0;
+    left: 0;
+    height: 100%;
+    padding: 0;
 }
 
 .phone-page-scroll-area {
-    float: left;
-    height: calc(100% - var(--phone-page-top-bar-height) - var(--phone-page-bottom-bar-height));
-    margin-top: var(--phone-page-top-bar-height);
     overflow-y: scroll;
-    width: 100%;
     background-color: rgba(252, 252, 252, 255);
+    width: 100%;
+    height: calc(100% - var(--phone-page-top-bar-height) - var(--phone-page-bottom-bar-height));
+    float: left;
+    margin-top: var(--phone-page-top-bar-height);
 }
 
 .phone-page-top-bar {
-    background-color: var(--logo-color);
-    height: var(--phone-page-top-bar-height);
     position: absolute;
+    background-color: var(--logo-color);
     top: 0;
     width: 100%;
+    height: var(--phone-page-top-bar-height);
 }
 
 .phone-page-bottom-bar {
-    bottom: 0;
-    height: var(--phone-page-bottom-bar-height);
     position: absolute;
+    bottom: 0;
     width: 100%;
+    height: var(--phone-page-bottom-bar-height);
 }
 
 .phone-project-item-box {
-    border-bottom: 1px solid #eee;
-    height: 54px;
     background-color: #fff;
+    height: 54px;
+    border-bottom: 1px solid #eee;
 }
 
 .phone-project-icon {
-    color: var(--logo-color);
     font-size: 32px;
+    color: var(--logo-color);
     margin-left: 24px;
     margin-right: 18px;
 }
 
 .phone-project-item-name {
-    color: #333;
     font-size: 18px;
     font-weight: light;
+    color: #333;
 }
 
 .phone-project-item-handle {
-    color: #ddd;
     font-size: 20px;
+    color: #ddd;
     margin-left: 20px;
     margin-right: 20px;
 }
 
 .phone-top-name {
-    color: var(--logo-text-color);
     font-size: 18px;
     font-weight: bold;
-    padding-left: 24px;
+    color: var(--logo-text-color);
     padding-top: 6px;
+    padding-left: 24px;
 }
 
 .phone-text-button {
-    color: var(--logo-text-color);
     font-size: 18px;
     font-weight: bold;
+    color: var(--logo-text-color);
     padding-right: 24px;
 }
 
 .phone-top-title {
-    color: var(--logo-text-color);
     font-size: 18px;
     font-weight: bold;
+    color: var(--logo-text-color);
     padding-top: 6px;
 }
 
 .phone-top-item-icon {
-    color: var(--logo-text-color);
     font-size: 18px;
+    color: var(--logo-text-color);
     padding-left: 24px;
     padding-right: 24px;
 }
@@ -638,91 +633,91 @@ li {
 .mission {
     font-size: 14px;
     font-weight: 350;
-    margin-left: 5px;
     margin-top: 10px;
     margin-bottom: 10px;
+    margin-left: 5px;
 }
 
 .mission-distributor {
+    font-size: 8px;
     color: #666;
+    background: #fff;
+    width: 52px;
+    height: 18px;
     padding-top: 0px;
     padding-bottom: 0px;
     padding-left: 1px;
     padding-right: 1px;
-    height: 18px;
-    width: 52px;
-    font-size: 8px;
-    border-radius: 20px;
-    border: var(--button-border);
     margin-top: 0px;
     margin-left: 10px;
-    background: #fff;
+    border: var(--button-border);
+    border-radius: 20px;
 }
 
 .mission-add-button {
-    color: var(--logo-color);
     font-size: 14px;
     font-weight: 350;
+    color: var(--logo-color);
     margin-left: 40px;
 }
 
 .mission-list-area-parent {
     position: absolute;
-    width: 180px;
     right: 0;
+    width: 180px;
 }
 
 .mission-list-area {
-    color: #666;
     position: fixed;
+    color: #666;
     width: 180px;
 }
 
 .mission-list {
-    margin-bottom: 20px;
+    display: inline-block;
     font-size: 13px;
     font-weight: 350;
-    display: inline-block;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
-    padding-bottom: 2px;
     width: 80%;
+    padding-bottom: 2px;
+    margin-bottom: 20px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
 }
 
 .mission-list-add-button {
-    color: var(--logo-color);
     font-size: 13px;
     font-weight: 350;
+    color: var(--logo-color);
 }
 
 .mission-new-rectangle {
     background-color: #eee;
     width: 20px;
     height: 20px;
-    border-radius: 5px;
-    border: 1px solid #eee;
     margin-left: 10px;
+    border: 1px solid #eee;
+    border-radius: 5px;
 }
 
 .mission-new-input {
-    border: none;
-    border-bottom: 1px solid #eee;
-    outline: none;
     font-size: 15px;
     font-weight: 350;
     margin-left: 10px;
+    border: none;
+    border-bottom: 1px solid #eee;
+    outline: none;
 }
 
 .mission-new-submit-button {
-    margin-left: 40px;
+    font-size: 13px;
+    font-weight: 300;
+    color: #fff;
+    background-color: var(--logo-color);
     height: 28px;
     margin-top: 10px;
     margin-bottom: 10px;
-    background-color: var(--logo-color);
-    color: #fff;
-    font-weight: 300;
-    font-size: 13px;
-    border-radius: var(--button-radius);
+    margin-left: 40px;
     border: var(--button-border);
+    border-radius: var(--button-radius);
 }
 
 .mission-new-form {
@@ -734,23 +729,23 @@ li {
 }
 
 .mission-list-new-input {
+    font-size: 13px;
+    font-weight: 350;
     border: none;
     border-bottom: 1px solid #eee;
     outline: none;
-    font-size: 13px;
-    font-weight: 350;
 }
 
 .mission-list-new-submit-button {
+    font-size: 12px;
+    font-weight: 300;
+    color: #fff;
+    background-color: var(--logo-color);
     height: 28px;
     margin-top: 10px;
     margin-bottom: 10px;
-    background-color: var(--logo-color);
-    color: #fff;
-    font-weight: 300;
-    font-size: 12px;
-    border-radius: var(--button-radius);
     border: var(--button-border);
+    border-radius: var(--button-radius);
 }
 
 // Checkbox CSS.
@@ -763,9 +758,9 @@ li {
 [type="checkbox"]:checked + label {
     position: relative;
     padding-left: 30px;
-    cursor: pointer;
     margin-top: 5px;
     margin-bottom: 5px;
+    cursor: pointer;
 }
 
 /* checkbox aspect */
@@ -773,13 +768,13 @@ li {
 [type="checkbox"]:checked + label:before {
     content: '';
     position: absolute;
-    left:0;
+    background: #fff;
     top: 0;
+    left:0;
     width: 20px;
     height: 20px;
-    background: #fff;
-    border-radius: var(--check-button-radius);
     border: var(--button-border);
+    border-radius: var(--check-button-radius);
 }
 
 /* checked mark aspect */
@@ -787,37 +782,37 @@ li {
 [type="checkbox"]:checked + label:after {
     content: '✔';
     position: absolute;
+    font-size: 14px;
+    color: var(--logo-color);
     top: 0;
     left: 4px;
     right: 0;
-    height: 20px;
     width: 20px;
-    font-size: 14px;
-    color: var(--logo-color);
+    height: 20px;
 }
 
 /* checked mark aspect changes */
 [type="checkbox"]:not(:checked) + label:after {
-    opacity: 0;
     -webkit-transform: scale(0);
     -moz-transform: scale(0);
     -ms-transform: scale(0);
+    opacity: 0;
     transform: scale(0);
 }
 
 [type="checkbox"]:checked + label:after {
-    opacity: 1;
     -webkit-transform: scale(1);
     -moz-transform: scale(1);
     -ms-transform: scale(1);
+    opacity: 1;
     transform: scale(1);
 }
 /* disabled checkbox */
 [type="checkbox"]:disabled:not(:checked) + label:before,
 [type="checkbox"]:disabled:checked + label:before {
-    box-shadow: none;
-    border-color: #bbb;
     background-color: #ddd;
+    border-color: #bbb;
+    box-shadow: none;
 }
 
 [type="checkbox"]:disabled:checked + label:after {
@@ -831,19 +826,19 @@ li {
 /* accessibility */
 [type="checkbox"]:checked:focus + label:before,
 [type="checkbox"]:not(:checked):focus + label:before {
-    border-radius: var(--check-button-radius);
     border: var(--button-border);
+    border-radius: var(--check-button-radius);
 }
 
 .mission-title {
-    margin-left: 10px;
-    font-weight: 350;
     font-size: 15px;
+    font-weight: 350;
+    margin-left: 10px;
 }
 
 .mission-title-link {
-    color: #222;
     font-weight: 350;
+    color: #222;
 }
 
 .mission-title-link:hover {
