Autofocus first input field when load new project page.

--- a/app/views/projects/new.html+phone.erb
+++ b/app/views/projects/new.html+phone.erb
@@ -19,7 +19,7 @@
         <div class="phone-page-scroll-area">
           <div class="input-group phone-input-group flex-vcenter">
             <span class="phone-input-title">项目名称</span>
-            <%= f.text_field :name, class: "phone-input-area" %>
+            <%= f.text_field :name, class: "phone-input-area", autofocus: true %>
           </div>
           <div class="input-group phone-input-group flex-vcenter">
             <span class="phone-input-title">项目描述</span>
