--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
-<html class="single-page-html">
+<html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
-  <body class="single-page-body">
-    <div class="single-page-background">
-      <div class="flex-center">
-        <h1 class="logo">Tower</h1>
-        <div class="sign-box">
-          <%= form_for(@user, url: password_reset_path(params[:id])) do |f| %>
-	    <%= hidden_field_tag :email, @user.email %>
+  <body class="fullscreen-body default-background-color">
+    <div class="flex-center">
+      <h1 class="logo">Tower</h1>
+      <div class="sign-box">
+        <%= form_for(@user, url: password_reset_path(params[:id])) do |f| %>
+	  <%= hidden_field_tag :email, @user.email %>
 
-            <h3 class="margin-bottom-normal">设置新的密码</h3>
-            <p><%= f.password_field :password, class: "form-control", placeholder: "请填写新的密码" %></p>
-            <p><%= f.submit "更新密码", class: "btn btn-primary sign-button-width sign-button-vertical-margins" %></p>
-          <% end%>
-        </div>
+          <h3 class="margin-bottom-normal">设置新的密码</h3>
+          <p><%= f.password_field :password, class: "form-control", placeholder: "请填写新的密码" %></p>
+          <p><%= f.submit "更新密码", class: "btn btn-primary sign-button-width sign-button-vertical-margins" %></p>
+        <% end%>
       </div>
     </div>
   </body>
