--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -8,7 +8,7 @@
     <div class="board-box position-relative"
          data-controller="mission"
          data-mission-mission-list-top="36">
-      <div class="project-title"><%= Project.find_by_hashid(params[:id]).name %> </div>
+      <div class="project-title"><%= @project.name %> </div>
       <div class="project-splitter"></div>
 
       <div class="mission-list-area-parent">
@@ -16,40 +16,42 @@
              data-target="mission.missionListArea"
              data-action="scroll@window->mission#onScroll">
           <ul>
-            <li class="mission-list">
-              默认任务清单1
-            </li>
-            <li class="mission-list">
-              默认任务清单2
-            </li>
-            <li class="mission-list">
-              默认任务清单3
-            </li>
-            <li class="mission-list">
-              默认任务清单4
-            </li>
-            <li class="mission-list">
-              默认任务清单5
-            </li>
-            <li class="mission-list">
-              默认任务清单6
-            </li>
+	    <%= render @project.mission_lists %>
+            <!-- <li class="mission-list">
+		 默认任务清单1
+		 </li>
+		 <li class="mission-list">
+		 默认任务清单2
+		 </li>
+		 <li class="mission-list">
+		 默认任务清单3
+		 </li>
+		 <li class="mission-list">
+		 默认任务清单4
+		 </li>
+		 <li class="mission-list">
+		 默认任务清单5
+		 </li>
+		 <li class="mission-list">
+		 默认任务清单6
+		 </li> -->
             <li>
               <div class="mission-list-new-form"
                    data-target="mission.missionListNewForm">
-                <%= form_for(:project, url: "#") do |f| %>
-                  <div class="flex-vcenter">
-                    <input type="text" class="mission-list-new-input" placeholder="新的任务清单">
-                  </div>
-                  <div>
-                    <%= f.submit "添加任务清单", class: "btn-sm mission-list-new-submit-button" %>
-                    <a href="#"
-                       class="link-button-small"
-                       data-target="mission.missionListCancelButton"
-                       data-action="mission#clickMissionListCancelButton">
-                      取消</a>
-                  </div>
-                <% end %>
+                <div class="flex-vcenter">
+                  <input type="text" class="mission-list-new-input" placeholder="新的任务清单">
+                </div>
+                <div>
+                  <a href="#"
+                     class="btn-sm mission-list-new-submit-button"
+                     data-action="mission#clickMissionListAddButton">
+                    添加任务清单</a>
+                  <a href="#"
+                     class="link-button-small"
+                     data-target="mission.missionListCancelButton"
+                     data-action="mission#clickMissionListCancelButton">
+                    取消</a>
+                </div>
               </div>
             </li>
             <li>
@@ -65,7 +67,8 @@
       </div>
 
       <ul class="mission-list-title"
-                 data-target="mission.missionListTitle">默认任务清单
+          data-target="mission.missionListTitle">默认任务清单
+	<!-- <div class="mission-list-input-tooltip">请输入任务清单的名字</div> -->
         <li>
           <input type="checkbox" id="checkbox1">
           <label for="checkbox1" class="mission-title"><a href="#" class="mission-title-link">完成任务清单试图</a></label>
@@ -138,21 +141,21 @@
         </li>
         <li>
           <div class="mission-new-form"
-               data-target="mission.missionNewForm">
+	       data-target="mission.missionNewForm">
             <%= form_for(:project, url: "#") do |f| %>
-              <div class="flex-vcenter">
+	      <div class="flex-vcenter">
                 <label class="mission-new-rectangle"></label>
                 <input type="text" class="mission-new-input" placeholder="新的任务">
                 <button type="button" class="btn mission-distributor">未指派</button>
-              </div>
-              <div>
+	      </div>
+	      <div>
                 <%= f.submit "添加任务", class: "btn-sm mission-new-submit-button" %>
                 <a href="#"
                    class="link-button-small"
                    data-target="mission.missionCancelButton"
                    data-action="mission#clickMissionCancelButton">
                   取消</a>
-              </div>
+	      </div>
             <% end %>
           </div>
         </li>
@@ -167,7 +170,7 @@
       </ul>
 
       <ul class="mission-list-title"
-                 data-target="mission.missionListTitle">默认任务清单
+          data-target="mission.missionListTitle">默认任务清单
         <li>
           <input type="checkbox" id="checkbox1">
           <label for="checkbox1" class="mission-title"><a href="#" class="mission-title-link">完成任务清单试图</a></label>
