Insert mission list in page.

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -35,7 +35,7 @@
 		 <li class="mission-list">
 		 默认任务清单6
 		 </li> -->
-            <li>
+            <li class="mission-list-new-form-item">
               <div class="mission-list-new-form"
                    data-target="mission.missionListNewForm">
                 <div class="flex-vcenter">
@@ -68,7 +68,6 @@
 
       <ul class="mission-list-title"
           data-target="mission.missionListTitle">默认任务清单
-	<!-- <div class="mission-list-input-tooltip">请输入任务清单的名字</div> -->
         <li>
           <input type="checkbox" id="checkbox1">
           <label for="checkbox1" class="mission-title"><a href="#" class="mission-title-link">完成任务清单试图</a></label>
