Click add mission list button to update model and feedback to user with input

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -16,7 +16,7 @@
              data-target="mission.missionListArea"
              data-action="scroll@window->mission#onScroll">
           <ul>
-	    <%= render @project.mission_lists %>
+	    <%#= render @project.mission_lists %>
             <!-- <li class="mission-list">
 		 默认任务清单1
 		 </li>
